Refine README and improve user config handling in the app
- Updated README to clarify .env fallback behavior and local storage of frontend values.
- Removed unused config hint element from app.js.
- Added function to apply stored user configuration on app initialization.
- Enhanced server logic to prioritize user input over .env values for team and bot IDs.
- Updated index.html to reflect changes in configuration messaging.

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
           <label for="defaultBotId">Default Bot ID</label>
           <input id="defaultBotId" type="text" placeholder="bot_..." />
         </div>
-        <small id="configHint" class="config-hint">Using frontend values.</small>
+        <small class="config-hint">Values are stored only in your browser on this machine.</small>
       </section>
 
       <section class="grid-two">
