--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
           <label for="defaultBotId">Default Bot ID</label>
           <input id="defaultBotId" type="text" placeholder="bot_..." />
         </div>
-        <small class="config-hint">Values are stored only in your browser on this machine.</small>
+        <small id="configHint" class="config-hint">Values are stored only in your browser on this machine.</small>
       </section>
 
       <section class="grid-two">
