When opening the dropdown, the list should open scrolled down on the currently selected endpoint. Also, the app should   show the available query params for the particular selected endpoints (I should not need to click the 'Add' button and   then go to the documentation to look for the exact name of the key - instead, the app should know about the available   params, their keys and values and allow me to simply add them)

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <section class="card">
           <div class="title-row">
             <h2>Query Parameters</h2>
-            <button id="addQueryParamBtn" type="button">Add</button>
+            <button id="addQueryParamBtn" type="button" title="Add custom parameter">+ Custom</button>
           </div>
           <div id="queryParamsContainer" class="stack"></div>
         </section>
