collect teamId and botId from default fields and override on input; update labels in defaults builder

--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,11 @@
 
       <section class="card defaults-builder">
         <div class="row">
-          <label for="defaultTeamId">Default Team ID</label>
+          <label for="defaultTeamId">Team ID</label>
           <input id="defaultTeamId" type="text" placeholder="team_..." />
         </div>
         <div class="row">
-          <label for="defaultBotId">Default Bot ID</label>
+          <label for="defaultBotId">Bot ID</label>
           <input id="defaultBotId" type="text" placeholder="bot_..." />
         </div>
         <small id="configHint" class="config-hint">Values are stored only in your browser on this machine.</small>
